--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
+    <main>
+        <h1>Generatore di password</h1>
+        <h2 id="subtitle">La tua password è:</h2>
+    </main>
+    <script type="text/javascript" src="script.js"></script>
     
 </body>
 </html>
